# neonize

./: .buildinfo  .bumpversion.toml  .gitignore  .readthedocs.yaml  DOCUMENTATION_SETUP.md  README.md  bump_version.sh  genindex.html  get_proto.sh  index.html  install.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  repack.py  search.html  searchindex.js
.github/: FUNDING.yml
.github/workflows/: autobump.yml  contributor_build.yml  docs.yml  musltest.yml  release.yml  sponsor.yaml
_modules/: index.html
_modules/neonize/: builder.html  client.html  download.html  events.html  exc.html  utils.html
_modules/neonize/utils/: calc.html  enum.html  ffmpeg.html  iofile.html  jid.html  message.html  platform.html  thumbnail.html
_sources/source/: neonize.proto.rst.txt  neonize.rst.txt
docs/: .gitignore  README.md  build.py  changelog.md  conf.py  faq.md  generate.py  getstarted.rst  index.md  index.rst  requirements.txt
docs/api-reference/: async-client.md  client.md  index.md
docs/async/: index.md
docs/development/: building.md  contributing.md  index.md  testing.md
docs/examples/: index.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/source/: conf.py  index.rst  modules.rst  neonize.proto.rst  neonize.rst  neonize.utils.rst
docs/user-guide/: client-configuration.md  index.md  receiving-messages.md  sending-messages.md
examples/: async_basic.py  async_oneshot.py  basic.py  interactive_async.py  multisession.py  multisession_async.py  paircode.py
goneonize/: Neonize.proto  __main__.py  build.py  build_python_proto.py  chat_settings_store.go  contact_store.go  go.mod  go.sum  helpers.go  main.go  version.go
goneonize/defproto/: .sha  Neonize.pb.go  Neonize.proto  def.pb.go
goneonize/header/: cstruct.h
goneonize/neonize/: Neonize.pb.go
goneonize/python/: pythonptr.c  pythonptr.h
goneonize/utils/: decoder.go  encoder.go  log.go  utils.go
neonize/: __init__.py  _binder.py  builder.py  client.py  const.py  download.py  events.py  exc.py  types.py  utils.py
neonize/aioze/: client.py  events.py
neonize/aioze/preview/: compose.py  grabber.py
neonize/ext/interactive_message/: __init__.py  ai_rich.py  base.py  button.py  buttonv2.py  carousel.py
neonize/gocode/: Neonize.proto  Neonize_pb2.py  Neonize_pb2.pyi  build.bat  build.py  build.sh  build_python_proto.py  ctype.go  go.mod  gocode.h  main.go  pythonptr.c  pythonptr.h  test.py
neonize/gocode/header/: cstruct.h
neonize/gocode/neonize/: Neonize.pb.go
neonize/gocode/utils/: decoder.go  encoder.go  utils.go
neonize/goneonize/: Neonize.proto  build.bat  build.py  build.sh  build_python_proto.py  def.proto  go.sum  main.go
neonize/goneonize/defproto/: def.pb.go
neonize/goneonize/neonize/: Neonize.pb.go
neonize/goneonize/utils/: decoder.go  encoder.go
neonize/proto/: Neonize_pb2.py  Neonize_pb2.pyi  __init__.py  def_pb2.py  def_pb2.pyi
neonize/proto/instamadilloAddMessage/: InstamadilloAddMessage_pb2.py  InstamadilloAddMessage_pb2.pyi
neonize/proto/instamadilloCoreTypeActionLog/: InstamadilloCoreTypeActionLog_pb2.py  InstamadilloCoreTypeActionLog_pb2.pyi
neonize/proto/instamadilloCoreTypeAdminMessage/: InstamadilloCoreTypeAdminMessage_pb2.py  InstamadilloCoreTypeAdminMessage_pb2.pyi
neonize/proto/instamadilloCoreTypeCollection/: InstamadilloCoreTypeCollection_pb2.py  InstamadilloCoreTypeCollection_pb2.pyi
neonize/proto/instamadilloCoreTypeLink/: InstamadilloCoreTypeLink_pb2.py  InstamadilloCoreTypeLink_pb2.pyi
neonize/proto/instamadilloCoreTypeMedia/: InstamadilloCoreTypeMedia_pb2.py  InstamadilloCoreTypeMedia_pb2.pyi
neonize/proto/instamadilloCoreTypeText/: InstamadilloCoreTypeText_pb2.py  InstamadilloCoreTypeText_pb2.pyi
neonize/proto/instamadilloDeleteMessage/: InstamadilloDeleteMessage_pb2.py  InstamadilloDeleteMessage_pb2.pyi
neonize/proto/instamadilloSupplementMessage/: InstamadilloSupplementMessage_pb2.py  InstamadilloSupplementMessage_pb2.pyi
neonize/proto/instamadilloTransportPayload/: InstamadilloTransportPayload_pb2.py  InstamadilloTransportPayload_pb2.pyi
neonize/proto/instamadilloXmaContentRef/: InstamadilloXmaContentRef_pb2.py  InstamadilloXmaContentRef_pb2.pyi
neonize/proto/waAICommon/: WAAICommon_pb2.py  WAAICommon_pb2.pyi  WAWebProtobufsAICommon_pb2.py  WAWebProtobufsAICommon_pb2.pyi
neonize/proto/waAICommonDeprecated/: WAAICommonDeprecated_pb2.py  WAAICommonDeprecated_pb2.pyi  WAWebProtobufsAICommonDeprecated_pb2.py  WAWebProtobufsAICommonDeprecated_pb2.pyi
neonize/proto/waAdv/: WAAdv_pb2.py  WAAdv_pb2.pyi
neonize/proto/waArmadilloApplication/: WAArmadilloApplication_pb2.py  WAArmadilloApplication_pb2.pyi
neonize/proto/waArmadilloBackupCommon/: WAArmadilloBackupCommon_pb2.py  WAArmadilloBackupCommon_pb2.pyi
neonize/proto/waArmadilloBackupMessage/: WAArmadilloBackupMessage_pb2.py  WAArmadilloBackupMessage_pb2.pyi
neonize/proto/waArmadilloICDC/: WAArmadilloICDC_pb2.py  WAArmadilloICDC_pb2.pyi
neonize/proto/waArmadilloMiTransportAdminMessage/: WAArmadilloMiTransportAdminMessage_pb2.py  WAArmadilloMiTransportAdminMessage_pb2.pyi
neonize/proto/waArmadilloTransportEvent/: WAArmadilloTransportEvent_pb2.py  WAArmadilloTransportEvent_pb2.pyi
neonize/proto/waArmadilloXMA/: WAArmadilloXMA_pb2.py  WAArmadilloXMA_pb2.pyi
neonize/proto/waBotMetadata/: WABotMetadata_pb2.py  WABotMetadata_pb2.pyi  WAWebProtobufsBotMetadata_pb2.py  WAWebProtobufsBotMetadata_pb2.pyi
neonize/utils/: __init__.py  _events.py  calc.py  enum.py  ffmpeg.py  iofile.py  jid.py  log.py  message.py  platform.py  scaler.py  sticker.py  thumbnail.py
source/: modules.html  neonize.html  neonize.proto.html  neonize.utils.html
tests/: test_binder.py
tools/: action.py  build_goneonize_decision.py  docs.py  download.py  flow.py  github.py  goneonize.py  repack.py  update_proto.py  value_changer.py  version.py  version_cli.py  versioning.py
(+80 files in other folders)
