[tool.poetry]
name = "neonize"
version = "8.0.0"
description = "whatsmeow binder for python"
authors = ["krypton-byte <rosid6434@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
exclude = [
    "docs/",
    "goneonize/"
]
include = [
    "neonize/neonize-*"
]


[tools.pyright]


[tool.poetry.dependencies]
python = ">=3.10"
protobuf = "^4.25.1"
pillow = "^10.1.0"
requests = "^2.31.0"
phonenumbers = "^8.13.27"
linkpreview = "^0.8.3"
segno = "^1.6.0"
python-magic = [
    { version = "0.4.27", markers="platform_system != 'Windows'"}
]
python-magic-bin = [
    { version = '0.4.14', markers = "platform_system == 'Windows'" },
]
tqdm = "^4.66.1"

[tool.mypy]
exclude = [
    "_pb2.py"
]
ignore_missing_imports = true


[tool.poetry.group.dev.dependencies]
segno = "^1.6.0"
mypy-protobuf = "^3.5.0"
types-requests = "^2.31.0.20240106"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^2.1.1"
furo = "^2024.5.6"


[[tool.poetry.source]]
name = "neonize"
url = "https://github.com/krypton-byte/neonize"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.scripts]
docsbuild = "docs.build:build"
build = "goneonize.build:build"
version = "goneonize.build:set_version"
