[project]
name = "neonize"
description = "Neonize is a Python library designed to streamline the automation of tasks on WhatsApp"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "httpx>=0.28.1",
    "linkpreview>=0.11.0",
    "phonenumbers>=8.13.52",
    "pillow>=11.1.0",
    "protobuf==6.30.2",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "requests>=2.32.3",
    "segno>=1.6.1",
    "tqdm>=4.67.1",
]
[project.urls]
HomePage = "https://github.com/krypton-byte/neonize"
[dependency-groups]
dev = [
    "mypy-protobuf>=3.6.0",
    "taskipy>=1.14.1",
    "types-requests>=2.32.0.20241016",
    "wheel>=0.45.1",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.0",
]

[tool.taskipy.tasks]
build = {cmd = "uv run -m tools.goneonize", help = "build goneonize"}
docsbuild = {cmd = "uv run -m tools.docs", help="build autogen documentation for neonize"}
version = {cmd = "uv run -m tools.version_cli", help = "set neonize & goneonize version"}
download = {cmd = "uv run -m tools.download", help="Download goneonize from github release with specific version"}
repack = {cmd = "uv run -m tools.repack", help="generate wheel with spesific os & arch"}
proto = {cmd = "uv run -m tools.update_proto", help="update whatsapp proto files"}
goneonize_changed = {cmd = "uv run -m tools.build_goneonize_decision", help = "This command to compares the latest release of goneonize"}

[tool.uv.workspace]
exclude = ["docs/","goneonize/"]
members = ["neonize/neonize-*"]
[tool.pdm.version]
source = "file"
path = "neonize/__init__.py"
[tool.pdm.build]
includes = ["neonize/", "neonize/neonize-*"]
excludes = ["goneonize"]
# run-setuptools = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.ruff]
exclude = [
    "proto","*.pyi"
]
line-length = 100

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
